...
            android:id="@+id/menu_favourite"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/star"
            android:title="Favourite" />
        <item
            android:id="@+id/menu_option"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/setting"
            android:title="Setting" />
        <item
            android:id="@+id/menu_login"
...
